<resources>
    <string name="app_name">Auto Volume</string>
    <string name="detail_setting">Auto Volume detail setting</string>
    <string name="ringtone">Ringtone</string>
    <string name="media">Media</string>
    <string name="notifications">Notifications</string>
    <string name="alarm">Alarm</string>
    <string name="mic_input">Mic Input Value</string>
    <string name="mic_volume">Mic Volume</string>
    <string name="mic_sensitive">Mic Sensitivity</string>
    <string name="change"><u>change</u></string>
    <string name="volume_interval">Volume Adjustment Interval</string>
    <string name="low">low</string>
    <string name="high">high</string>
    <string name="min_volume">Min Volume:" "</string>
    <string name="max_volume">Max Volume:" "</string>
    <string name="volume_range">volume adjustment range</string>
    <string name="backButton_twice">Press the Back button again to exit.</string>
    <string name="notification_content">Auto volume is on.</string>
    <string name="minute">minute</string>
    <string name="second">second</string>
    <string name="turn_off_mute">Turn off mute mode of the volume.</string>
    <string name="notice">Notice</string>
    <string name="setting_capital">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="permission_denied_message">Mic Permission denied. You need to allow the Mic Permission directly to measure noise around.</string>
    <string name="permission_denied_toast">You need to allow the Mic Permission to measure noise around.</string>
    <string name="turn_off">TURN OFF</string>
    <string name="detail_setting_description">Set detail of Auto Volume function. Make sure to set this. It is recommended to set this. (Mic Volume, Mic Sensitivity, Volume Adjustment Interval)</string>
    <string name="mic_input_description">The volume of your smartphone will be adjusted depending on this value. \nThis value is calculated reflected the value of Mic volume and Mic Sensitivity.</string>
    <string name="mic_volume_description">The higher the value, the larger the microphone input value is measured.</string>
    <string name="mic_sensitive_description">The higher the value, the greater the range in which the microphone input value changes.</string>
    <string name="volume_interval_description">The interval to adjust volume. The average value of the Mic Input Value is obtained during the set time and the volume is adjusted accordingly.</string>
    <string name="switch_title">Turn On Auto Volume Function</string>
    <string name="switch_description">Click each icon to turn Auto Volume function on or off for that volume.</string>
    <string name="volume_range_title">Volume Adjustment Range</string>
    <string name="volume_range_description">Click to set the range in which the volume changes. When the function is turned on, the volume is adjusted only within the set range.</string>
    <string name="turn_off_in_app">App is running. Please turn off in app.</string>
    <string name="additional_settings">Additional Settings</string>
</resources>