<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/top_linearLayout"
        app:layout_constraintEnd_toEndOf="@id/top_linearLayout"
        app:layout_constraintStart_toStartOf="@id/top_linearLayout"
        app:layout_constraintTop_toTopOf="@id/top_linearLayout" />

    <LinearLayout
        android:id="@+id/top_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/auto_volume"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="#32000000" />

        <Switch
            android:id="@+id/main_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp"
            android:paddingBottom="16dp"/>
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/drop_shadow"
        app:layout_constraintTop_toBottomOf="@id/top_linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout_3"
        app:layout_constraintEnd_toStartOf="@id/linearLayout_2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_linearLayout">

        <ImageView
            android:id="@+id/ringtoneIcon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:contentDescription="ringtone icon"
            app:srcCompat="@drawable/ic_baseline_ring_volume_24px"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView_1"
            style="@style/categoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ringtone" />

        <LinearLayout
            android:id="@+id/range_linearLayout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/min_ringtone"
                style="@style/minMaxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_volume" />

            <TextView
                android:id="@+id/max_ringtone"
                style="@style/minMaxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_volume" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/linearLayout_1"
        app:layout_constraintTop_toBottomOf="@+id/top_linearLayout">

        <ImageView
            android:id="@+id/mediaIcon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:contentDescription="media icon"
            app:srcCompat="@drawable/ic_baseline_music_note_24px"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView_2"
            style="@style/categoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/media" />

        <LinearLayout
            android:id="@+id/range_linearLayout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/min_media"
                style="@style/minMaxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_volume" />

            <TextView
                android:id="@+id/max_media"
                style="@style/minMaxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_volume" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/linearLayout_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_1">

        <ImageView
            android:id="@+id/notificationsIcon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:contentDescription="notifications icon"
            app:srcCompat="@drawable/ic_baseline_feedback_24px"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView_3"
            style="@style/categoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/notifications" />

        <LinearLayout
            android:id="@+id/range_linearLayout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/min_notifications"
                style="@style/minMaxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_volume" />

            <TextView
                android:id="@+id/max_notifications"
                style="@style/minMaxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_volume" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/linearLayout_3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_2">

        <ImageView
            android:id="@+id/alarmIcon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:contentDescription="alarm icon"
            app:srcCompat="@drawable/ic_baseline_alarm_24px"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView_4"
            style="@style/categoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/alarm" />

        <LinearLayout
            android:id="@+id/range_linearLayout_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/min_alarm"
                style="@style/minMaxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_volume" />

            <TextView
                android:id="@+id/max_alarm"
                style="@style/minMaxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_volume" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@color/divider"
        app:layout_constraintStart_toEndOf="@id/linearLayout_1"
        app:layout_constraintTop_toBottomOf="@id/top_linearLayout" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_1" />

    <!--메인 스위치가 꺼져있을때 하이라이트 하는 뷰-->
    <View
        android:id="@+id/highlight_switch"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/top_linearLayout"
        app:layout_constraintEnd_toEndOf="@id/top_linearLayout"
        app:layout_constraintTop_toTopOf="@id/top_linearLayout" />
</android.support.constraint.ConstraintLayout>
